--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -10,7 +10,7 @@ output:
 params:
   scenario:
     label: "Scenario"
-    value: "new-wul_vlong"
+    value: "base_vlong"
     input: text
   thin_percent:
     label: "Proportion of Posterior Samples to Retain?"
