--- a/README.rmd
+++ b/README.rmd
@@ -11,10 +11,11 @@ editor_options:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-> This repository stores the code code used to fit the model and compile the output presented in the manuscript _A state-space model to quantify density dependence, demographic heterogeneity, and spatial synchrony in Grande Ronde Basin Chinook salmon populations_ by B.A. Staton, P.P. Gibson, M. Liermann, C. Justice, M.J. Kaylor, R. Sharma, and S.M. White, which is currently undergoing peer review.
+> This repository stores the code used to fit the model and compile the output presented in the manuscript _A state-space model to quantify density dependence, demographic heterogeneity, and spatial synchrony in Grande Ronde Basin Chinook salmon populations_ by B.A. Staton, P.P. Gibson, M. Liermann, C. Justice, M.J. Kaylor, R. Sharma, and S.M. White, which has been accepted for publication in the journal _Ecological Modelling_.
 
-[![ArticleDOI](https://img.shields.io/badge/Article-PLACEHOLDER-blue?logo=doi&logoColor=f5f5f5)]()  
-[![GitHub Repo Archive DOI](https://img.shields.io/badge/GitHub%20Repo%20Archive-PLACEHOLDER-blue?logo=github)]()
+[![ArticleDOI](https://img.shields.io/badge/Article-10.1016/j.ecolmodel.2025.111289-blue?logo=doi&logoColor=f5f5f5)](https://www.doi.org/10.1016/j.ecolmodel.2025.111289)  
+[![GitHub Code Repo Archive DOI](https://img.shields.io/badge/GitHub%20Code%20Repo%20Archive-PLACEHOLDER-blue?logo=github)]()  
+[![GitHub Data Repo Archive DOI](https://img.shields.io/badge/GitHub%20Data%20Repo%20Archive-PLACEHOLDER-blue?logo=github)]()  
 
 ## Repo Organization
 
